# Semantic_Web_and_Knowledge_Graphs

./: .gitignore  LICENSE  README.md  pyproject.toml
1_University_Vocabulary_and_XML_Tools/: README.md  university.dtd  university.xml  university.xsd  university_output.html  university_sample_dtd.xml  university_to_html.xsl  university_xml_app.py
2_RDF_Vocabulary_and_SPARQL_Tool/: README.md  cs_data.ttl  cs_vocabulary.ttl  sparql_gui.py
3_Ontology_Modeling_and_Reasoning/: README.md  campus.rules  campus_instances.ttl  campus_ontology.ttl  pom.xml
3_Ontology_Modeling_and_Reasoning/src/main/java/org/example/: App.java  WebApp.java
3_Ontology_Modeling_and_Reasoning/src/main/resources/web/: app.js  index.html  styles.css
4_Chinese_Word_Embedding_Design/: README.md  dataset.py  embedding_utils.py  main.py  model.py  preprocessor.py  pretrained_embeddings.py  skipgram_model.py  trainer.py  visualizer.py
4_Chinese_Word_Embedding_Design/data/: campus_dataset.json
4_Chinese_Word_Embedding_Design/models/: embedding_model_config.json  vocabulary.json
