[project]
name = "semantic-web-and-knowledge-graphs"
version = "0.1.0"
description = "Semantic Web and Knowledge Graphs Course Projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.0.2",
    "rdflib>=7.5.0",
    "tensorflow>=2.15.0",
    "jieba>=0.42.1",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "hypothesis>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "adjusttext>=1.3.0",
]
